--- a/config.json
+++ b/config.json
@@ -1,3 +1,3 @@
 Guild.xyz verification
-Timestamp: 2025-11-01T17:23:57.962Z
-Commit: Add export functionality for reports
+Timestamp: 2025-11-06T00:30:13.959Z
+Commit: Fix race condition in async operations
