--- a/config.json
+++ b/config.json
@@ -1,3 +1,3 @@
 Guild.xyz verification
-Timestamp: 2025-11-06T00:30:13.959Z
-Commit: Fix race condition in async operations
+Timestamp: 2025-11-06T00:30:18.803Z
+Commit: Add dark mode support
