--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 Guild.xyz verification
-Timestamp: 2025-11-06T00:30:30.680Z
-Commit: Resolve timezone issues in date handling
+Timestamp: 2025-11-06T00:30:33.443Z
+Commit: Fix CSS styling bug on mobile devices
