--- a/config.json
+++ b/config.json
@@ -1,3 +1,3 @@
 Guild.xyz verification
-Timestamp: 2025-11-06T00:30:24.610Z
-Commit: Patch security vulnerability in authentication
+Timestamp: 2025-11-06T00:30:46.264Z
+Commit: Add multi-language support
