--- a/config.json
+++ b/config.json
@@ -1,3 +1,3 @@
 Guild.xyz verification
-Timestamp: 2025-11-06T00:30:46.264Z
-Commit: Add multi-language support
+Timestamp: 2025-11-06T00:30:50.291Z
+Commit: Implement user profile customization
