--- a/config.json
+++ b/config.json
@@ -1,3 +1,3 @@
 Guild.xyz verification
-Timestamp: 2025-11-06T00:30:55.018Z
-Commit: Implement user profile customization
+Timestamp: 2025-11-06T00:31:17.757Z
+Commit: Fix broken links in documentation
