--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 Guild.xyz verification
-Timestamp: 2025-11-06T00:31:06.543Z
-Commit: Fix memory leak in event handlers
+Timestamp: 2025-11-06T00:31:20.368Z
+Commit: Resolve timezone issues in date handling
