--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 Guild.xyz verification
-Timestamp: 2025-11-06T00:31:20.368Z
-Commit: Resolve timezone issues in date handling
+Timestamp: 2025-11-06T00:31:25.886Z
+Commit: Correct typo in configuration file
