--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 Guild.xyz verification
-Timestamp: 2025-11-06T00:31:25.886Z
-Commit: Correct typo in configuration file
+Timestamp: 2025-11-06T00:31:41.296Z
+Commit: Implement user profile customization
