--- a/config.json
+++ b/config.json
@@ -1,3 +1,3 @@
 Guild.xyz verification
-Timestamp: 2025-11-06T00:32:01.243Z
-Commit: Implement user profile customization
+Timestamp: 2025-11-06T00:32:28.170Z
+Commit: Add multi-language support
