--- a/config.json
+++ b/config.json
@@ -1,3 +1,3 @@
 Guild.xyz verification
-Timestamp: 2025-11-06T00:32:29.545Z
-Commit: Resolve timezone issues in date handling
+Timestamp: 2025-11-06T00:32:37.509Z
+Commit: Fix CSS styling bug on mobile devices
