--- a/config.json
+++ b/config.json
@@ -1,3 +1,3 @@
 Guild.xyz verification
-Timestamp: 2025-11-06T00:32:37.509Z
-Commit: Fix CSS styling bug on mobile devices
+Timestamp: 2025-11-06T00:33:54.567Z
+Commit: Fix broken links in documentation
