--- a/config.json
+++ b/config.json
@@ -1,3 +1,3 @@
 Guild.xyz verification
-Timestamp: 2025-11-06T00:34:20.022Z
-Commit: Correct typo in configuration file
+Timestamp: 2025-11-06T00:34:28.252Z
+Commit: Fix race condition in async operations
