--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 Guild.xyz verification
-Timestamp: 2025-11-06T00:34:34.028Z
-Commit: Introduce real-time notifications
+Timestamp: 2025-11-06T00:34:35.387Z
+Commit: Fix broken links in documentation
