--- a/config.json
+++ b/config.json
@@ -1,3 +1,3 @@
 Guild.xyz verification
-Timestamp: 2025-11-06T00:34:28.252Z
-Commit: Fix race condition in async operations
+Timestamp: 2025-11-06T00:34:50.403Z
+Commit: Fix broken links in documentation
