--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 Guild.xyz verification
-Timestamp: 2025-11-06T00:36:47.619Z
-Commit: Fix memory leak in event handlers
+Timestamp: 2025-11-06T00:36:48.820Z
+Commit: Fix broken links in documentation
