--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 Guild.xyz verification
-Timestamp: 2025-11-06T00:36:48.820Z
-Commit: Fix broken links in documentation
+Timestamp: 2025-11-06T00:45:07.553Z
+Commit: Introduce real-time notifications
