--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 Guild.xyz verification
-Timestamp: 2025-11-06T00:45:07.553Z
-Commit: Introduce real-time notifications
+Timestamp: 2025-11-06T00:45:11.630Z
+Commit: Fix CSS styling bug on mobile devices
