--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 Guild.xyz verification
-Timestamp: 2025-11-06T00:45:11.630Z
-Commit: Fix CSS styling bug on mobile devices
+Timestamp: 2025-11-06T00:45:31.349Z
+Commit: Fix database connection timeout
