--- a/config.json
+++ b/config.json
@@ -1,3 +1,3 @@
 Guild.xyz verification
-Timestamp: 2025-11-06T00:46:13.269Z
-Commit: Resolve timezone issues in date handling
+Timestamp: 2025-11-06T00:46:20.644Z
+Commit: Resolve null pointer exception in user service
