--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 Guild.xyz verification
-Timestamp: 2025-11-06T00:47:03.402Z
-Commit: Introduce real-time notifications
+Timestamp: 2025-11-06T00:47:43.446Z
+Commit: Correct typo in configuration file
