--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 Guild.xyz verification
-Timestamp: 2025-11-06T00:48:12.000Z
-Commit: Fix race condition in async operations
+Timestamp: 2025-11-06T00:48:26.285Z
+Commit: Fix database connection timeout
