--- a/config.json
+++ b/config.json
@@ -1,3 +1,3 @@
 Guild.xyz verification
-Timestamp: 2025-11-06T00:46:22.133Z
-Commit: Fix broken links in documentation
+Timestamp: 2025-11-06T00:48:38.532Z
+Commit: Add multi-language support
