--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 Guild.xyz verification
-Timestamp: 2025-11-06T00:48:26.285Z
-Commit: Fix database connection timeout
+Timestamp: 2025-11-06T00:48:41.576Z
+Commit: Fix CSS styling bug on mobile devices
