--- a/config.json
+++ b/config.json
@@ -1,3 +1,3 @@
 Guild.xyz verification
-Timestamp: 2025-11-06T00:48:40.136Z
-Commit: Add multi-language support
+Timestamp: 2025-11-06T00:48:43.562Z
+Commit: Fix memory leak in event handlers
