--- a/config.json
+++ b/config.json
@@ -1,3 +1,3 @@
 Guild.xyz verification
-Timestamp: 2025-11-06T00:48:43.562Z
-Commit: Fix memory leak in event handlers
+Timestamp: 2025-11-06T00:49:27.538Z
+Commit: Add dark mode support
