--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 Guild.xyz verification
-Timestamp: 2025-11-06T00:49:01.471Z
-Commit: Implement user profile customization
+Timestamp: 2025-11-06T00:49:32.854Z
+Commit: Add multi-language support
