--- a/config.json
+++ b/config.json
@@ -1,3 +1,3 @@
 Guild.xyz verification
-Timestamp: 2025-11-06T00:49:27.538Z
-Commit: Add dark mode support
+Timestamp: 2025-11-06T00:49:46.157Z
+Commit: Fix race condition in async operations
