--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 Guild.xyz verification
-Timestamp: 2025-11-06T00:49:36.866Z
-Commit: Correct typo in configuration file
+Timestamp: 2025-11-06T00:49:48.993Z
+Commit: Fix broken links in documentation
