--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 Guild.xyz verification
-Timestamp: 2025-11-06T00:49:48.993Z
-Commit: Fix broken links in documentation
+Timestamp: 2025-11-06T00:50:21.741Z
+Commit: Introduce real-time notifications
